syntax = "proto3";

package rs.devtools.tauri;

import "google/protobuf/timestamp.proto";

service Tauri {
  rpc GetVersions(VersionsRequest) returns (Versions) {}

  rpc GetConfig(ConfigRequest) returns (Config) {}

  rpc GetAsset(AssetRequest) returns (Asset) {}

  rpc GetMetrics(MetricsRequest) returns (Metrics) {}
}

message VersionsRequest {}

message Versions {
  /// Tauri version, follows SemVer.
  string tauri = 1;
  /// Version of the OS'es webview.
  /// The format of this is freeform and changes depending on the OS. 
  optional string webview = 2;
}

message ConfigRequest {}

message AssetRequest {
  string path = 1;
}

message MetricsRequest {}

message Config {
  /// The raw JSON string of the configuration
  string raw = 1;
}

message Asset {
  /// The asset bytes.
  bytes bytes = 1;
  /// The asset's mime type.
  string mime_type = 2;
  /// The `Content-Security-Policy` header value.
  optional string csp_header = 3;
}

message Metrics {
  /// Tauri application initialization time
  google.protobuf.Timestamp initialized_at = 1;
  /// Tauri application reported `AppReady` time
  google.protobuf.Timestamp ready_at = 2;
}